fixing overflow of scrolling in x direction so buttons don't become squished in half-window

--- a/concert-finder/src/ConcertsNearby.css
+++ b/concert-finder/src/ConcertsNearby.css
@@ -2,6 +2,8 @@
     display: flex;
     align-content: center;
     justify-content: center;
+    overflow: auto;
+    scrollbar-width: none;
 }
 
 .title {
